--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+
+a:hover {
+@apply underline;
+}
+
   h1, h2, h3, h4, h5, h6 {
     @apply font-heading my-6 font-bold;
   }
@@ -50,6 +55,6 @@ li {
 
 @layer components {
   .btn {
-    @apply bg-green-500 tracking-wider w-full text-center text-white font-bold cursor-pointer uppercase px-4 py-2 rounded-md hover:bg-green-600 transition-colors block
+    @apply hover:no-underline bg-green-500 tracking-wider w-full text-center text-white font-bold cursor-pointer uppercase px-4 py-2 rounded-md hover:bg-green-600 transition-colors block
   }
 }
